--- a/resources/assets/sass/sketch.scss
+++ b/resources/assets/sass/sketch.scss
@@ -6,8 +6,14 @@
 // Variables
 @import "variables";
 
-// Material
-@import "~vue-material/vue-material.css";
+@import "~vue-material/dist/theme/engine"; // Import the theme engine
+
+@include md-register-theme("default", (
+        primary: md-get-palette-color(blue, A200), // The primary color of your application
+        accent: md-get-palette-color(red, A200) // The accent and secondary color
+));
+
+@import "~vue-material/dist/theme/all"; // Apply the theme
 
 // Include JointJS CSS
 @import "~jointjs/dist/joint.css";
